# 2017-tfg-richard-nicklas

./: README.md
GPG3/: sources.txt
GPG3/ICESTUDIO/: spi_slave.v
GPG3/ICESTUDIO/Motor_POC/: color_proc.v  spi_ledctrl.v  top.ice
GPG3/ICESTUDIO/UART_SPI/: seq_uart_tx.py  uart_rx.v  uart_spi.ice
GPG3/Python/: interface_lite.py
ROS/: catkin_ws
ROS/beginner_tutorials/: CMakeLists.txt  package.xml
ROS/camera/: CMakeLists.txt  README  package.xml
docs/: README.md  _config.yml
docs/_pages/: home.md  logbook.md
docs/_posts/: .2022-04-01- ROS & Gazebo.swp  2021-02-14- SPI Communication.md  2021-03-01- GPG3 SPI LED.md  2021-04-14- FPGA RedBall Detection.md  2021-06-01- GPG SPI LED and Motors .md  2022-03-01- Verilator.md  2022-03-15- ROS & Gazebo  2022-03-15- ROS & Gazebo.md  2022-04-01- ROS & Gazebo F1  2022-04-07- RoboticsAcademy Docker.md  2022-04-14- Update verilog source for the Gazebo FPGA simulation.md  2022-04-21- example6
docs_working/_posts/: 2021-01-12-previous-work.md  2021-02-01- GoPiGo.md  2021-03-14- GPG3 Distance Sensor.md  2021-05-01- FPGA Filtered Color Detection.md  2022-04-01- ROS & Gazebo F1.md  2022-04-21- Example 6.md
opencv/: README
opencv/cmaketest/: CMakeCache.txt  CMakeLists.txt  Makefile  VideoCapture  VideoCapture.cpp  cmake_install.cmake
opencv/test/: test  test.cpp
opencv/vault/: CMakeLists.txt  FLANNMatching.cc  kptExtraction.cpp  simpleCV.cpp
opencv/vault/jderob/: CMakeLists.txt  simpleCV.cpp
verilator/blinky/: README
verilator/poc_verilator_simulation/: README.md
verilator/test/: README  sim_main.cpp
(+121 files in other folders)
